added new styles directory and style.css file and pushed and committed through command line.

--- a/public_html/styles/style.css
+++ b/public_html/styles/style.css
@@ -1,7 +1,14 @@
-h1 {
-
-}
 
 .body {
-
+    font-family: Arial;
+    font-size: medium;
+    color: black;
+    display: block;
 }
+
+h1 {
+    font-weight: bold;
+}
+
+
+
