--- a/public_html/styles/style.css
+++ b/public_html/styles/style.css
@@ -16,9 +16,11 @@ body {
 
 h1 {
     color: midnightblue;
+    text-align: center;
 }
 
 h2 {
     color: midnightblue;
+    text-align: left;
 }
 
