--- a/public_html/main-style.css
+++ b/public_html/main-style.css
@@ -4,7 +4,7 @@
     padding-right: 2rem;
 }
 .container-fluid {
-    padding: 25px;
+    padding: 10px;
 }
 
 .navbar-dark .navbar-brand {
@@ -21,17 +21,28 @@
     font-size: x-large;
     color: white;
     padding-top: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 55px;
+    padding-right: 55px;
     margin: 55px;
 }
 
 .container-fluid-quote-2 {
     background-color: seashell;
+    margin: 55px;
+}
+
+.container-fluid-quote-2 .quote-2 {
+    float: right;
     text-align: left;
     font-family: Papyrus;
     font-size: x-large;
     color: black;
+}
+
+.container-fluid-quote-2 .image-fluid {
+    float: left;
+    width: 55%;
+    height: 55%;
 }
 
 .top-section {
