fixed footer formatting to duplicate the navbar look.

--- a/public_html/main-style.css
+++ b/public_html/main-style.css
@@ -88,5 +88,9 @@ body {
 
 .footer-container p {
     color: darkorange;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 1.5em;
     text-align: center;
+    padding: 1rem;
 }
