added more images as placeholders in section 4.

--- a/public_html/main-style.css
+++ b/public_html/main-style.css
@@ -86,6 +86,14 @@ body {
     right: 30px;
 }
 
+/*Section-4*/
+.section-4 .conditioning {
+    width: 10%;
+    height: 10%;
+    display: flex;
+    float: left;
+}
+
 .footer-container p {
     color: darkorange;
     font-weight: bold;
