--- a/public_html/main-style.css
+++ b/public_html/main-style.css
@@ -27,7 +27,7 @@ body {
 /*index-image-1: Image-1 (Lord Ganesha)*/
 
 .index-image-1.image-fluid {
-    margin-top: 25rem;
+    margin: 15px;
 }
 
 /*Section-1: Quote-1 "Yoga Chittavritti Nirodha"*/
@@ -88,12 +88,17 @@ body {
 
 /*Section-4*/
 
+.section-4 .container-fluid {
+    background-color: lightblue;
+}
+
 .section-4 h1 {
     text-align: center;
     color: darkorange;
     font-weight: bold;
     font-style: italic;
     font-size: 2.5em;
+    padding-top: 15px;
 }
 
 .section-4 h2 {
@@ -104,47 +109,57 @@ body {
     font-size: 1.5em;
 }
 
-.section-4 {
-    background-color: lightblue;
-}
 
 /*Section-5*/
-.section-5 {
+.section-5 .container-fluid {
     background-color: navajowhite;
-    margin: 10px;
 }
 
-.section-5 .rounded-circle {
+.section-5 .container-fluid .rounded-circle {
     text-align: center;
-    padding-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    display: block;
 }
 
-.section-5 .column-1 {
+.section-5 .container-fluid .about-me .column-1 {
     float: left;
     width: 50%;
-    padding-left: 500px;
-    height: 475px;
+    padding-left: 25px;
+    height: 250px;
+    padding-top: 50px;
 }
 
-.section-5 .column-2 {
+.section-5 .container-fluid .about-me .column-2 {
     float: left;
     width: 50%;
-    padding-left: 150px;
-    height: 475px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 250px;
+    padding-top: 50px;
 
 }
+
+/*.section-5 .about-me .column-3 {
+    float: left;
+    width: 25%;
+    padding-left: 25px;
+    height: 100px;
+    margin-right: 25px;
+}*/
 
 /*Section-6*/
-.container-section-6 {
+.section-6 .container-fluid {
     background-color: lightblue;
 }
 
-.greeting {
+.section-6 .container-fluid .greeting {
     text-align: center;
     color: darkorange;
     font-weight: bold;
     font-style: italic;
     font-size: 2.5em;
+    margin-top: 15px;
 }
 
 h1 {
